# cross_detection

./: README.md
catkin_ws/src/bboxes_ros_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/cross_detection/: CMakeLists.txt  package.xml
catkin_ws/src/cross_detection/launch/: cross_detection.launch
catkin_ws/src/cross_detection/src/: main.cpp
matlab/: select_cross_template.m  test.m  test_hsv_filter.m  test_pca_filter.m
